<resources>
    <string name="app_name">StoryApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama">Insert Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="users_name">Name</string>
    <string name="deskripsi">Description</string>
    <string name="addstory_button">Add Story</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="hint">Insert story description</string>
    <string name="logout">Log out</string>
    <string name="welcome_s">Welcome, %s !</string>
    <string name="add_new_story">Add new story</string>
    <string name="logo">Story App</string>
    <string name="maps">maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
</resources>